# github-sponsor-discord-notifier

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/: renovate.json
.github/workflows/: codeql.yml  docker-publish.yml  ruff.yml
tests/: test_main.py
