[tool.poetry]
name = "github-sponsor-discord-notifier"
version = "0.1.0"
description = "Send a webhook to Discord when someone sponsors you."
authors = ["Joakim Hellsén <tlovinator@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
homepage = "https://github.com/TheLovinator1/github-sponsor-discord-notifier"
repository = "https://github.com/TheLovinator1/github-sponsor-discord-notifier"
keywords = [
    "bot",
    "discord",
    "github-sponsor-discord-notifier",
    "github",
    "sponsors",
    "github-sponsors",
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
discord-webhook = "^1.3.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.0"
pre-commit = "^3.7.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.ruff]
fix = true
preview = true
unsafe-fixes = true
line-length = 120
select = ["ALL"]
ignore = [
    "D100",
    "D104",
    "CPY001",
    "ERA001",
    "TD002",
    "FIX002",
    "COM812",
    "ISC001",
    "G004",
    "S320",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"**/tests/**/*.py" = [
    "S101",    # asserts allowed in tests...
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR6301",
]
