[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
name = "github-sponsor-discord-notifier"
version = "0.1.0"
description = "Send a webhook to Discord when someone sponsors you."
authors = [ "Joakim Hellsén <tlovinator@gmail.com>" ]
readme = "README.md"
license = "GPL-3.0-or-later"
homepage = "https://github.com/TheLovinator1/github-sponsor-discord-notifier"
repository = "https://github.com/TheLovinator1/github-sponsor-discord-notifier"
keywords = [
  "bot",
  "discord",
  "github-sponsor-discord-notifier",
  "github",
  "sponsors",
  "github-sponsors",
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = [ "standard" ], version = "^0.31.0" }
discord-webhook = "^1.3.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pre-commit = "^3.8.0"

[tool.ruff]
line-length = 120
preview = true
fix = true
unsafe-fixes = true
lint.select = [
  "ALL",
]
lint.ignore = [
  "COM812",
  "CPY001",
  "D100",
  "D104",
  "ERA001",
  "FIX002",
  "G004",
  "ISC001",
  "S320",
  "TD002",
]

lint.per-file-ignores."**/tests/**/*.py" = [
  "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
  "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
  "PLR6301",
  "S101",    # asserts allowed in tests...
]
lint.pydocstyle.convention = "google"
